Signed-off-by: 王翔 <charmcheena@hotmail.com>

--- a/src/Platform.WebApi/appsettings.json
+++ b/src/Platform.WebApi/appsettings.json
@@ -1,6 +1,5 @@
 {
   "ConnectionStrings": {
-    //"Default": "Server=115.159.53.212\\sql2012; Database=FangTeMarketDb; User Id=chenhm;Password=Chenhm8472;" //正式数据库链接
     "Default": "Server=.; Database=PlatformDb; User Id=sa;Password=p@sswrd2018;" //测试数据库链接
   },
   "Logging": {
@@ -9,13 +8,9 @@
     }
   },
   "GlobalSettings": {
-    "CityId": 11,
-    "CityName": "深圳",
-    "Uri": "http://115.159.121.70:9007/Api/Employee/CheckEmployee",
     "SecretKey": "AC0ADFB96B9D4C8B963C91C9CEERW41W",
-    "From": "Marketing",
+    "From": "Platform",
     "AESKey": "7+f+uV4YhlD6uD3Zj9pHjw==",
-    "DefaultHeader": "http://images.fangte.com/market/header.png",
     "DefaultPwd": "123456",
     "SingleBlurSearch": true
   },
