--- a/src/Platform.Application/Platform.Application.csproj
+++ b/src/Platform.Application/Platform.Application.csproj
@@ -11,14 +11,12 @@
     <RootNamespace>Platform</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Platform.Common\Platform.Common.csproj" />
     <ProjectReference Include="..\Platform.Core\Platform.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Abp.EntityFrameworkCore" Version="3.8.3" />
     <PackageReference Include="Abp.AutoMapper" Version="3.8.3" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UserService\UserDto\" />
   </ItemGroup>
 </Project>
