--- a/src/Platform.WebApi/Platform.WebApi.csproj
+++ b/src/Platform.WebApi/Platform.WebApi.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="MyExceptionFilter.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
