--- a/src/Platform.WebApi/appsettings.json
+++ b/src/Platform.WebApi/appsettings.json
@@ -12,7 +12,8 @@
     "From": "Platform",
     "AESKey": "7+f+uV4YhlD6uD3Zj9pHjw==",
     "DefaultPwd": "123456",
-    "SingleBlurSearch": true
+    "SingleBlurSearch": "true£¬",
+    "IsRelease": false
   },
   "AllowedHosts": "*"
 }
