--- a/src/Platform.Core/Platform.Core.csproj
+++ b/src/Platform.Core/Platform.Core.csproj
@@ -18,4 +18,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Platform.Common\Platform.Common.csproj" />
+  </ItemGroup>
 </Project>
